# connect

./: .gitignore  LICENSE  README.md  pyproject.toml  todo.md  todo.org
.vocode/: config-ng.yaml  config.yaml
.vocode/workflows/: agent.yaml  architect.yaml  chat.yaml  http_chat.yaml  subagents.yaml
docs/: design.md  tool_schema.md
scripts/: generate-models.py
src/connect/: __init__.py  auth.py  auth_env.py  auth_router.py  client.py  exceptions.py  message_text.py  models.py  registry.py  tool_schema.py  types.py  usage.py
src/connect/credentials/: __init__.py  base.py  chatgpt.py  helpers.py
src/connect/data/: models.json
src/connect/providers/: __init__.py  anthropic.py  base.py  chatgpt.py  gemini.py  openai.py  openrouter.py
src/connect/transport/: __init__.py  assembly.py  http.py  json_stream.py  sse.py
src/llmclient/: __init__.py
tests/: test_client.py  test_message_text.py  test_registry.py  test_tool_schema.py  test_usage.py
tests/credentials/: test_chatgpt.py
tests/integration/: _live_test_utils.py  test_anthropic_live.py  test_chatgpt_live.py  test_chatgpt_oauth_live.py  test_gemini_live.py  test_openai_live.py
tests/providers/: test_anthropic.py  test_gemini.py  test_openai.py
tests/transport/: test_assembly.py  test_http.py  test_json_stream.py  test_sse.py
