[project]
name = "connect"
version = "0.1.0"
description = "Abstracted LLM client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.4",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
websocket = ["websockets>=12.0"]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
exclude-newer = "1 week"

[build-system]
requires = ["uv_build>=0.8.3"]
build-backend = "uv_build"

[tool.pytest.ini_options]
markers = [
    "integration: opt-in tests that exercise live provider APIs",
]
